[package]
name = "youtube-dl-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = "0.6.0"
serde = {version="1.0.193", features = ["derive"]}
serde_json = "1.0.109"
url = "2.5.0"
reqwest = { version = "0.11.23", features = ["blocking", "json", "stream"] }
futures-util = "0.3.14"
tokio = { version = "1.13.0", features = ["full"] }